--- a/login.html
+++ b/login.html
@@ -7,21 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    login ddddd
-    login 测试
-    <div>
-        this is div
-    </div>
-    
-    <ul>
-        <li>这是li标签</li>
-    </ul>
-
-    <p>
-        又加了个p标签3333
-        fff又加了个p标签
-        又加了个p标签222233333
-    </p>
-    login
+    <form action="" method="post">
+        <input type="button" value="提交">
+    </form>
 </body>
 </html>
