--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <form action="" method="post">
+        <input type="text">用户名
+        <input type="password">密码
         <input type="button" value="提交">
     </form>
 </body>
