--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <form action="" method="post">
         <input type="text" name="username">用户名
         <input type="password" name="pwd">密码
-        <input type="password" name="repass">密码
+        <input type="password" name="repass">重复密码
         <input type="button" value="提交">
     </form>
 </body>
