--- a/login.html
+++ b/login.html
@@ -13,5 +13,8 @@
         <input type="password" name="repass">重复密码
         <input type="button" value="提交">
     </form>
+    <div>
+        我了个擦
+    </div>
 </body>
 </html>
