--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
         <input type="text" name="username">用户名
         <input type="password" name="pwd">密码
         <input type="password" name="repass">重复密码
+        <input type="text" name="email">邮件
         <input type="button" value="提交">
     </form>
 </body>
